--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="welcome">Welcome to Madlibs! What are madlibs? They are short, silly stories based on your words. Just pick ten words and read your own short story afterwards!</string>
     <string name="start">Get started!</string>
     <string name="afb">afbeelding</string>
-    <string name="title2">Fill in the words for your story</string>
+    <string name="title2">Fill in the words to complete your story</string>
+    <string name="go">Go make my story!</string>
 </resources>
