--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,15 @@
     <string name="afb">afbeelding</string>
     <string name="title2">Fill in the words to complete your story</string>
     <string name="go">Go make my story!</string>
+    <string name="make">Make another story!</string>
+    <string name="storytitle">Here\'s your story:</string>
+    <string name="story">Here\'s how you dance the Monstrosity. Stand with your feet together. Now,
+        move your left foot up to the side. Now stamp your right foot 10 times and put
+        your hands on your partner\'s shoulders . Next, you both stumble slowly to the right and
+        bend your arm backward. For the next eight counts, both of you swim down to
+        the left. Next, you and your partner stand back to back and wiggle your nails and
+        slap your toes together. Don\'t forget to keep stamping your right foot. Now, face
+        your partner again, put your toes together and shout, " aaargh !" Now, lie
+        backward and repeat the whole thing 3 times. If you feel that you can\'t learn this dance,
+        you can always stamp the next one out. </string>
 </resources>
