--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">MadLibs</string>
     <string name="action_settings">Settings</string>
-    <string name="welcome">Welcome to Madlibs! What are madlibs? They are short, silly stories based on your words. Just pick ten words and read your own short story afterwards!</string>
+    <string name="welcome">Welcome to Madlibs! What are madlibs? They are short, silly stories based on your words. Just pick your words and read your own short story afterwards!</string>
     <string name="start">Get started!</string>
     <string name="afb">afbeelding</string>
     <string name="title2">Fill in the words to complete your story</string>
